Fix overflow

--- a/src/styles/components/_base.scss
+++ b/src/styles/components/_base.scss
@@ -9,6 +9,7 @@ body {
 
 .page-content {
   flex: 1;
+  overflow-x: hidden;
 }
 
 img {
